salesforce-main/src/main/default/objects/LiveChatTranscript/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <formula>CASESAFEID(Lead.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead ID</label>
    <type>Text</type>
</CustomField>