salesforce-main/src/main/default/objects/LiveChatTranscript/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity that live chat is related to</description>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Live Chat Transcripts</relationshipLabel>
    <relationshipName>Live_Chat_Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>